; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_cheat.c_CheatRemoveARCode.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_cheat.c_CheatRemoveARCode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [12 x i8] c"%08lX %04hX\00", align 1
@CHEATTYPE_WORDWRITE = common dso_local global i32 0, align 4
@CHEATTYPE_BYTEWRITE = common dso_local global i32 0, align 4
@CHEATTYPE_ENABLE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @CheatRemoveARCode(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i16, align 2
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call i32 @sscanf(i8* %6, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i64* %4, i16* %5)
  %8 = load i64, i64* %4, align 8
  %9 = lshr i64 %8, 28
  switch i64 %9, label %28 [
    i64 1, label %10
    i64 3, label %16
    i64 13, label %22
  ]

10:                                               ; preds = %1
  %11 = load i32, i32* @CHEATTYPE_WORDWRITE, align 4
  %12 = load i64, i64* %4, align 8
  %13 = and i64 %12, 268435455
  %14 = load i16, i16* %5, align 2
  %15 = call i32 @CheatRemoveCode(i32 %11, i64 %13, i16 zeroext %14)
  store i32 %15, i32* %2, align 4
  br label %29

16:                                               ; preds = %1
  %17 = load i32, i32* @CHEATTYPE_BYTEWRITE, align 4
  %18 = load i64, i64* %4, align 8
  %19 = and i64 %18, 268435455
  %20 = load i16, i16* %5, align 2
  %21 = call i32 @CheatRemoveCode(i32 %17, i64 %19, i16 zeroext %20)
  store i32 %21, i32* %2, align 4
  br label %29

22:                                               ; preds = %1
  %23 = load i32, i32* @CHEATTYPE_ENABLE, align 4
  %24 = load i64, i64* %4, align 8
  %25 = and i64 %24, 268435455
  %26 = load i16, i16* %5, align 2
  %27 = call i32 @CheatRemoveCode(i32 %23, i64 %25, i16 zeroext %26)
  store i32 %27, i32* %2, align 4
  br label %29

28:                                               ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %29

29:                                               ; preds = %28, %22, %16, %10
  %30 = load i32, i32* %2, align 4
  ret i32 %30
}

declare dso_local i32 @sscanf(i8*, i8*, i64*, i16*) #1

declare dso_local i32 @CheatRemoveCode(i32, i64, i16 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
